css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');

@font-face {
  font-family: 'kollektif';
  src: url('./fonts/kollektif/Kollektif.ttf');
  font-weight: normal;
}

@font-face {
  font-family: 'kollektif';
  src: url('./fonts/kollektif/Kollektif-Bold.ttf');
  font-weight: bold;
}

@font-face {
  font-family: 'Nickainley';
  src: url('./fonts/Nickainley/Nickainley-Normal.ttf');
  font-weight: normal;
}

:root {
  --offWhite: #fff3fb;
  --grey: #eef0f2;
  --opaqueBlack: rgb(0, 0, 0, 0.4);
  --green: #709e81;
}

* {
  margin: 0;
}

html,
body {
  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
  -moz-box-sizing: border-box; /* Firefox, other Gecko */
  box-sizing: border-box; /* Opera/IE 8+ */
  font-family: 'Open Sans', 'sans-serif';
}

body {
  padding-bottom: 7rem;
}

button {
  outline: none;
  border: none;
  cursor: pointer;
}

button:disabled {
  cursor: not-allowed;
}

a {
  text-decoration: none;
  color: inherit;
  padding: 0;
  margin: 0;
  cursor: pointer;
}
h1,
h2,
h3,
h4,
h5 {
  font-family: 'kollektif', sans-serif;
  font-weight: normal;
}

h1 {
  font-size: 6rem;
}

h2 {
  font-size: 3rem;
}

h3 {
  font-size: 2rem;
}

img.accent {
  height: 50px;
  opacity: 50%;
}

.fancy {
  font-family: 'Nickainley', 'sans-serif';
}

#container {
  display: flex;
  flex-direction: column;
}

/* HERO */

#hero {
  background-image: url(../img/hero.png);
  background-repeat: no-repeat;
  background-position: top;
  background-size: cover;
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 1s ease-in-out;
}

#hero-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* END HERO */

/* SECTIONS */

.section {
  min-height: 45vh;
  padding: 6rem 0 0 0;
  display: flex;
  flex-direction: column;
}

.section > * {
  width: 60%;
  margin: auto;
}

/* END SECTIONS */

/* SECTION 1 */

.speech-bubble h2,
#project-gallery h2,
#resume h2 {
  position: absolute;
  left: -36px;
  top: -37px;
}

.speech-bubble {
  background-color: var(--grey);
  position: relative;
  padding: 4rem 2rem;
  font-size: 1.2rem;
}

.speech-bubble:after {
  content: '';
  position: absolute;
  left: 0;
  top: 50%;
  width: 0;
  height: 0;
  border: 20px solid transparent;
  border-right-color: var(--grey);
  border-left: 0;
  margin-top: -20px;
  margin-left: -20px;
}

.subsection.socials {
  font-size: 5rem;
  display: flex;
  justify-content: space-around;
  color: var(--green);
}

/* END SECTION 1 */

/* PROJECT GALLERY */

#project-gallery {
  position: relative;
  padding: 3rem 0;
}

.row {
  display: flex;
  flex-wrap: wrap;
}

/* Create four equal columns that sits next to each other */
.column {
  flex: 25%;
  max-width: 25%;
}

.column a {
  margin-top: 8px;
  vertical-align: middle;
  width: 100%;
  display: flex;
  filter: opacity(0.7) grayscale(1);
}

.column a:hover {
  filter: unset;
}

.column a img {
  width: inherit;
}

/* Responsive layout - makes a two column-layout instead of four columns */
@media screen and (max-width: 800px) {
  .column {
    flex: 50%;
    max-width: 50%;
  }
}

/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {
  .column {
    flex: 100%;
    max-width: 100%;
  }
}

.search {
  display: flex;
  position: relative;
}

#searchbar {
  padding: 1rem 0;
  border: none;
  background: var(--grey);
  text-align: center;
  outline: none;
  flex-grow: 1;
}

.section button {
  background-color: var(--green);
  padding: 1rem;
  border-radius: 2rem;
  width: 130px;
  color: #fff;
  font-size: 1rem;
  align-self: center;
}

#tags {
  overflow: scroll;
  height: 132px;
  top: 45px;
  position: absolute;
  background: var(--grey);
  width: 100%;
  visibility: hidden;
}

/* END PROJECT GALLERY */

/* RESUME */
#resume {
  background-color: var(--grey);
  position: relative;
  padding: 3rem 0;
}

